fix: add `overflow-x: hidden` to prevent horizontal scroll

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -16,6 +16,7 @@
 
 body {
   background-color: #efe9e4;
+  overflow-x: hidden; // Prevent headaches
 }
 
 a,
